<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".activities.SignUpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroymedium"
                android:text="@string/sign_up"
                android:textColor="@color/color_black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtLoginContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/gilroymedium"
                android:text="@string/signup_to_continue"
                android:textColor="@color/gray"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_gray_square"
                android:fontFamily="@font/gilroymedium"
                android:hint="@string/name"
                android:paddingHorizontal="20dp"
                android:text="Dipesh"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txtLoginContinue" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_gray_square"
                android:fontFamily="@font/gilroymedium"
                android:hint="@string/ph_no"
                android:text="8780827700"
                android:paddingHorizontal="20dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txtName" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_gray_square"
                android:fontFamily="@font/gilroymedium"
                android:hint="@string/email"
                android:text="dipes@gmail.com"
                android:paddingHorizontal="20dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txtPhone" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/gilroymedium"
                android:text="@string/sign_up"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardSignup">

        <TextView
            android:id="@+id/txtNotAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroymedium"
            android:text="@string/do_not_have_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroybold"
            android:text="@string/sign_in"
            android:layout_marginLeft="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtNotAccount"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>